@@ -82,7 +82,7 @@ public class TokenProvider implements InitializingBean {
 
 		List<? extends GrantedAuthority> authorities = Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
 			.map(SimpleGrantedAuthority::new)
-			.collect(Collectors.toList());
+			.toList();
 
 		User principal = new User(claims.getSubject(), "", authorities);
 
